@@ -461,6 +461,7 @@ const TCHAR LIBNXSNMP_EXPORTABLE *SNMPGetErrorText(DWORD dwError);
 DWORD LIBNXSNMP_EXPORTABLE SNMPSaveMIBTree(TCHAR *pszFile, SNMP_MIBObject *pRoot, DWORD dwFlags);
 DWORD LIBNXSNMP_EXPORTABLE SNMPLoadMIBTree(TCHAR *pszFile, SNMP_MIBObject **ppRoot);
 DWORD LIBNXSNMP_EXPORTABLE SNMPGetMIBTreeTimestamp(TCHAR *pszFile, DWORD *pdwTimestamp);
+DWORD LIBNXSNMP_EXPORTABLE SNMPResolveDataType(TCHAR *pszType);
 
 #endif   /* __cplusplus */
 
